[tool.poetry]
name = "bloodflow"
version = "0.1.0"
description = ""
authors = ["yo-aka-gene <yujiokano@keio.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pip = "^22.1.1"
tox = "^3.25.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
